<resources>
    <string name="app_name">Practical Parent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_child_list">Child List</string>
    <string name="child_configuration">View Children</string>
    <string name="use_the_below_to_add_a_child">Use the \'+\' below to add a child, or select a child to edit or delete it.</string>
    <string name="title_activity_child_add">Add Child</string>
    <string name="child_name_placeholder">Name</string>
    <string name="btnAdd">add</string>
    <string name="title_activity_child_edit">Edit Child</string>
    <string name="show_content">Show Content</string>
    <string name="time_out">Time Out</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="configure">Configure</string>
    <string name="practical_parent">Main Menu</string>
    <string name="set">Set</string>
    <string name="notify">Notify</string>
    <string name="_00_00">00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="set_timer">Set Timer:</string>
    <string name="minutes">Minutes</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="player_2_text">Player 2</string>
    <string name="player_1_title">Player 1</string>
    <string name="current_player_mode">Current Player Only</string>
    <string name="clear">Clear</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="name">Name</string>
    <string name="apply_change">Apply Changes</string>
    <string name="delete_child">Delete Child</string>
    <string name="date">Date</string>
    <string name="help_screen_violet">Violet</string>
    <string name="help_screen_creators">Reid Gendron\nGage Tylee\nWan Ying Chan</string>
    <string name="help_screen_team">Team</string>
    <string name="help_screen_creator">Creators:</string>
    <string name="help_screen_copyright">Copyright:</string>
    <string name="help_screen_references">Coin Sound\n○ https://www.storyblocks.com/audio/stock/coin-flip-whirl-high-pitched-land-solid-surface-bounce-bgnx4za2ldbk0wxw9fq.html\n\nCoin Images\n○ https://www.coinsandcanada.com/coins-prices.php?coin=25-cents-2003\n\nSky Wallpaper\n○ https://cutewallpaper.org/21/wallpaper-blue-skies/Wallpapers-Poketo.jpg\n\nBitmap Encoding\n○ https://stackoverflow.com/questions/18072448/how-to-save-image-in-shared-preference-in-android-shared-preference-issue-in-a\n\nDefault Image\n○ https://tangi.co</string>
    <string name="help_screen_bullet_points">○\n○\n○</string>
    <string name="child_config_item_name_placeholder">Child Name</string>
    <string name="child_config_item_image_placeholder">Child Photo</string>
    <string name="help">help</string>
    <string name="tasks">Tasks</string>
    <string name="use_the_below_to_add_a_task">Use the \'+\' below to add a task.</string>
    <string name="add">Add</string>
    <string name="task_name">Task Name:</string>
    <string name="task_description">Task Description:</string>
    <string name="todo">TODO</string>
    <string name="use_the_below_to_add_a_new_task_hold_on_task_to_edit_delete_a_task">Use the \'+\' below to add a new task. Hold on task to Edit/Delete a task.</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="whose_turn_next">Whose Turn Next:</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="textview">TextView</string>
    <string name="task_item_name">Task Item Name</string>
    <string name="child_name">Child Name</string>
    <string name="top">Top</string>
    <string name="nobody">Nobody</string>
    <string name="player">Player</string>
    <string name="choice">Choice</string>
    <string name="current_player">Current Player:</string>
    <string name="select_the_image_or_name_to_make_changes">Select the image or name to make changes.</string>
    <string name="take_breath">Take Breath</string>
    <string name="let_s_take_breaths_together">Let\'s take breaths together</string>
    <string name="begin">Begin</string>
    <string name="breaths_remaining"> </string>


</resources>