<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/flipCoin"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_marginBottom="20dp"
        android:text="@string/flip_coin"
        app:layout_constraintBottom_toTopOf="@+id/timeOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/tasks"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tasks"
        app:layout_constraintBottom_toTopOf="@+id/takeBreath"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/help"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_marginBottom="30dp"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/takeBreath"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_marginBottom="20dp"
        android:text="@string/take_breath"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/timeOut"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_marginBottom="20dp"
        android:text="@string/time_out"
        app:layout_constraintBottom_toTopOf="@+id/tasks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/configChild"
        android:layout_width="177dp"
        android:layout_height="68dp"
        android:layout_marginBottom="20dp"
        android:text="@string/configure"
        app:layout_constraintBottom_toTopOf="@+id/flipCoin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/practicalParent2"
        android:layout_width="215dp"
        android:layout_height="98dp"
        android:layout_marginTop="60dp"
        android:text="@string/practical_parent"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/configChild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

</androidx.constraintlayout.widget.ConstraintLayout>