<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Help">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/help_text_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/help_screen_team"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="#404040"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_text_creator" />

    <TextView
        android:id="@+id/help_text_violet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/help_screen_violet"
        android:textColor="#EE82EE"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/help_text_team"
        app:layout_constraintTop_toBottomOf="@+id/help_text_creator" />

    <TextView
        android:id="@+id/help_text_creators"
        android:layout_width="153dp"
        android:layout_height="84dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/help_screen_creators"
        android:textColor="#EE82EE"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/help_text_bullet_points"
        app:layout_constraintTop_toBottomOf="@+id/help_text_team" />

    <TextView
        android:id="@+id/help_text_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/help_screen_creator"
        android:textColor="#404040"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <TextView
        android:id="@+id/help_text_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/help_screen_copyright"
        android:textColor="#404040"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_text_creators" />

    <TextView
        android:id="@+id/help_text_references"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/help_screen_references"
        android:textStyle="italic"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_text_copyright" />

    <TextView
        android:id="@+id/help_text_bullet_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/help_screen_bullet_points"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_text_team" />

</androidx.constraintlayout.widget.ConstraintLayout>